styles.css
body {
    display: grid;
    grid-template-rows: auto 1fr;
    min-height: 100vh;
    margin: 0;
}

.header,
.content {
    padding-left: 20%;
    padding-right: 20%;
}

.header {
    background: white;
    grid-row: 1;
}


.content {
    background: rgb(240, 240, 240);
    box-shadow: inset 0 5px 5px #e2e8f0;
    grid-row: 2;
    display: flex;
    flex-direction: column;
    padding-top: 2rem;
}

.container {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
    gap: 2rem;
    padding: 2rem;
    max-width: 300px;
}

.card {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 1rem;
    background: white;
    padding: 1rem;
    border-radius: 15px;
    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
}

.h3 {
    margin: 0;
}

.add-book-button {
    align-self: center;
    border: 0;
    border-radius: 10px;
}

.add-book-button:hover {
    background: lightgray;
}

.form-popup {
    display: flex;
    display: none;
    align-self: center;
}

.form-container {
    align-self: center;
    display: flex;
    flex-direction: column;
    background: white;
    align-items: center;
    max-width: 300px;
    gap: 1rem;
    padding: 1rem;
    border-radius: 15px;
    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
}

.form-container h2 {
    margin: 0;
}

.read {
    display: flex;
    gap: 1rem;
    align-items: center;
}

